Updated quotes section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@ layout: default
   </p>
   {% endfor %}
 
-  <h3>Quotes</h3>
+  <h3>Favorite Quotes</h3>
 
   <blockquote>
     <p>There are only two hard things in Computer Science: cache invalidation and naming things.</p>
-    <footer>Phil Karlton</footer>
+    <small>Phil Karlton</small>
+  </blockquote>
+
+  <blockquote>
+    <p>If you wish to make an apple pie from scratch, you must first invent the universe.</p>
+    <small>Carl Sagan</small>
   </blockquote>
 
 </div>
